fix spacing of event edit location

--- a/client/styles/components/_buttons.scss
+++ b/client/styles/components/_buttons.scss
@@ -99,3 +99,7 @@
 	margin-left: 5px;
 	padding: 0;
 }
+
+.btn-inline {
+	margin-left: 5px;
+}
